# DS-Tracker

./: .gitignore  Dockerfile.old  LICENSE  Procfile  README.md  app.json  autoapp.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  webpack.config.js
assets/js/: main.js
dkr/: Dockerfile  docker-compose.yml
ds_tracker/: app.py
ds_tracker/public/: forms.py  views.py
ds_tracker/templates/: footer.html  layout.html  nav.html
ds_tracker/templates/public/: home.html
ds_tracker/user/: models.py
supervisord_programs/: gunicorn.conf
tests/: conftest.py  factories.py  test_forms.py  test_functional.py  test_models.py
