[tool.poetry]
name = "ds-tracker"
version = "0.1.0"
description = "Improved student leadership workflow using flask"
authors = ["Brian Thomas Ross <ml@brianthomasross.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
